# collab-benchmark-template

./: README.md  index.html  objects.inv  publish_results.py  pyproject.toml  run_this_benchmark.py  searchindex.js
.github/workflows/: local_tests.yml  pub_docs_and_results.yml  run_benchmarks.yml
