[tool.poetry]
package-mode = false
description = ""
authors = ["name <name@mymail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
mcsm-benchs = {git = "https://github.com/jmiramont/mcsm-benchs.git", branch = "dev"}


# Install Matlab-based tools with "poetry install --with matlab_tools"
[tool.poetry.group.matlab_tools]
optional = true

[tool.poetry.group.matlab_tools.dependencies]
matlabengine = "9.13.6" # Check this is correct for your Matlab installation.


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"